# polars_pandas_comparison

./: .gitignore  1_titanic_analysis_pandas.ipynb  2_titanic_analysis_polars.ipynb  3_fraud_detection_pandas.ipynb  4_fraud_detection_polars.ipynb  5_fraud_detection_polars_lazy.ipynb  6_fraud_detection_polars_lazy_stream.ipynb  README.md  benchmark_results.json  benchmark_test.py  pyproject.toml  titanic_analysis_polars copy.ipynb
data/: generate_transactions.py
prezentacja/: README.md  index.html  package-lock.json  package.json
