[project]
name = "polars_pandas_comparison"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Słowik",email = "jas.slowik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker (>=37.3.0,<38.0.0)",
    "polars (>=1.30.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyarrow (>=20.0.0,<21.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
